/**
 * Copyright (C) 2018 Nordstrom, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

import "google/protobuf/timestamp.proto";

package nordstrom.keymaster;
option java_multiple_files = true;
option java_package = "com.nordstrom.keymaster";
option java_outer_classname = "KeymasterProto";

message CertificateRequest {
  string subject_id = 1;
  enum DataClassification {
    GTM = 0; // This is for GTM internal use only.
    PCI = 1;
    PII = 2;
    TRIVIAL = 3;
  }
  DataClassification data_classification = 4;
}

message CertificateSuccess {
  message CertChain {
    bytes cert_pem = 1;
    enum ChainLevel {
      LEAF = 0;
      INTERMEDIATE = 1;
      ROOT = 2;
    }
    ChainLevel chain_level = 2;
  }
  repeated CertChain cert_chain = 1;
  google.protobuf.Timestamp expiration = 2;
  bytes private_key = 3;
}

message CertificateError {
  string message = 1;
}

message CertificateResponse {
  oneof response {
    CertificateSuccess success = 1;
    CertificateError error = 2;
  }
}

service Keymaster {
  rpc Certificate (CertificateRequest) returns (CertificateResponse);
}

